Cleaned up folders, deleted unncessary
Might be missing some important things

--- a/jaffle_shop_duckdb/scripts/1 Create fake data.ipynb
+++ b/jaffle_shop_duckdb/scripts/1 Create fake data.ipynb
@@ -27,7 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# venv\\Scripts\\activate.bat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +87,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from faker import Faker"
+    "from faker import Faker\n",
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "import duckdb\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Faker\n",
+    "fake = Faker('it_IT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to generate fake data\n",
+    "def generate_fake_data(num_rows):\n",
+    "    data = []\n",
+    "    for _ in range(num_rows):\n",
+    "        data.append({\n",
+    "            'id': fake.uuid4(),\n",
+    "            'name': fake.name(),\n",
+    "            'email': fake.email(),\n",
+    "            'address': fake.address(),\n",
+    "            'date_of_birth': fake.date_of_birth(),\n",
+    "            'created_at': fake.date_time_this_year()\n",
+    "        })\n",
+    "    return pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate fake data\n",
+    "num_rows = 50  # Specify the number of rows you want\n",
+    "df = generate_fake_data(num_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust path to the DuckDB file\n",
+    "db_path = os.path.join(os.path.dirname(os.getcwd()), 'jaffle_shop.duckdb')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Connect to DuckDB (or create it)\n",
+    "con = duckdb.connect(db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Write the DataFrame to the DuckDB database\n",
+    "con.execute(\"CREATE TABLE IF NOT EXISTS fake_table AS SELECT * FROM df\")\n",
+    "\n",
+    "# Commit and close the connection\n",
+    "con.close()"
    ]
   },
   {
@@ -91,7 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fake_obj = Faker()"
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
