Added .sql staging files and updated .yml files

--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -95,8 +95,18 @@
    "outputs": [],
    "source": [
     "# load staging files\n",
-    "\n",
     "## update yml files - include passwords etc \n",
+    "\n",
+    "# created customer_feedback, energy_consumption and customers models for staging \n",
+    "# created schema.yml to do tests for structure for staging\n",
+    "# updated profiles.yml to allow for prod vs dev/testing profiles\n",
+    "# slightly modified dbt_project.yml\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## update schema files "
    ]
