--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -122,6 +122,11 @@
     "\n",
     "# dbt run \n",
     "\n",
+    "# error\n",
+    "# dbt debug \n",
+    "\n",
+    "# profiles.yml file error \n",
+    "# updated profiles.yml format to match that required for sqlite \n",
     "\n",
     "\n",
     "# sqlite3 --version\n",
