Tested testing. / staging models to see if the views are saved

--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -159,7 +159,60 @@
    "source": [
     "## prepare model files / create model files \n",
     "\n",
-    "# adjust things \n",
+    "## adjusted error with staging models error problem, now it's fixed - missing one line. \n",
+    "\n",
+    "\n",
+    "# now we can see after running dbt run, we have staging tables, in the testing. view (they are not real tables):\n",
+    "\n",
+    "# aether_energy_analytics.duckdb> .tables\n",
+    "# +------------------------+\n",
+    "# | table_name             |\n",
+    "# +------------------------+\n",
+    "# | customers              |\n",
+    "# | customer_feedback      |\n",
+    "# | energy_consumption     |\n",
+    "# | stg_customers          |\n",
+    "# | stg_customer_feedback  |\n",
+    "# | stg_energy_consumption |\n",
+    "# +------------------------+\n",
+    "# Time: 0.032s\n",
+    "\n",
+    "# and we can access them by the following: \n",
+    "\n",
+    "# aether_energy_analytics.duckdb> select * from testing.stg_energy_consumption limit 10;\n",
+    "# +--------------------+\n",
+    "# | energy_usage_kWh   |\n",
+    "# +--------------------+\n",
+    "# | 37.01756286621094  |\n",
+    "# | 19.991851806640625 |\n",
+    "# | 22.52873420715332  |\n",
+    "# | 48.61664962768555  |\n",
+    "# | 33.538604736328125 |\n",
+    "# | 36.38673782348633  |\n",
+    "# | 31.328250885009766 |\n",
+    "# | 19.22132110595703  |\n",
+    "# | 25.794771194458008 |\n",
+    "# | 34.752342224121094 |\n",
+    "# +--------------------+\n",
+    "# 10 rows in set\n",
+    "# Time: 0.017s\n",
+    "# aether_energy_analytics.duckdb>\n",
+    "\n",
+    "# can see for the normal table there is no 'testing'\n",
+    "    \n",
+    "# aether_energy_analytics.duckdb> select * from customer_feedback limit 5;\n",
+    "# +---------------------+-------------+--------+-------------------------------------------------+\n",
+    "# | feedback_date       | customer_id | rating | comments                                        |\n",
+    "# +---------------------+-------------+--------+-------------------------------------------------+\n",
+    "# | 2023-01-01 00:00:00 | 28          | 4      | General I particular someone.                   |\n",
+    "# | 2023-01-08 00:00:00 | 46          | 2      | Painting food nothing land deep by.             |\n",
+    "# | 2023-01-15 00:00:00 | 8           | 3      | Rock seven visit team. Stuff service play dark. |\n",
+    "# | 2023-01-22 00:00:00 | 40          | 5      | Develop kid design human why.                   |\n",
+    "# | 2023-01-29 00:00:00 | 22          | 4      | Picture perform carry.                          |\n",
+    "# +---------------------+-------------+--------+-------------------------------------------------+\n",
+    "# 5 rows in set\n",
+    "# Time: 0.008s\n",
+    "\n",
     "\n",
     "# at this point, you maybe able to make this public for applications (should make good readme file to make it interactive)"
    ]
