Tweaking to get the models to work

--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -214,6 +214,16 @@
     "# Time: 0.008s\n",
     "\n",
     "\n",
+    "\n",
+    "######## Now transformation has happened.\n",
+    "# created tables aggregated_feeback.sql. customer_profiles.sql, monthly_consumption.sql \n",
+    "# updated schema to reflect changes \n",
+    "\n",
+    "# test to see if schema is good in production \n",
+    "\n",
+    "# some problems, working on it. \n",
+    "\n",
+    "\n",
     "# at this point, you maybe able to make this public for applications (should make good readme file to make it interactive)"
    ]
   },
@@ -234,6 +244,11 @@
    "outputs": [],
    "source": [
     "# pull data from sql server with tableau, and use tableau here \n",
+    "\n",
+    "# https://www.tableau.com/products/desktop/download\n",
+    "\n",
+    "# download tableau and see if we can make a dashboard of some kind  \n",
+    "\n",
     "\n",
     "# do time series forecasting \n",
     "\n",
