--- a/scripts/1 Create fake data.ipynb
+++ b/scripts/1 Create fake data.ipynb
@@ -1368,6 +1368,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
