Fixed syntax errors in .sql files

--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -223,6 +223,8 @@
     "\n",
     "# some problems, working on it. \n",
     "\n",
+    "# we had syntax errors, extra ; and missing , in .sql files. \n",
+    "\n",
     "\n",
     "# at this point, you maybe able to make this public for applications (should make good readme file to make it interactive)"
    ]
