Cleaned up python scripts, added script for data connector

--- a/scripts/0 Overview.ipynb
+++ b/scripts/0 Overview.ipynb
@@ -245,6 +245,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the processed/transformed tables \n",
+    "\n",
+    "# aether_energy_analytics.duckdb> select * from testing.aggregated_feedback limit 10;\n",
+    "# +-------------+--------------------+----------------+\n",
+    "# | customer_id | avg_rating         | feedback_count |\n",
+    "# +-------------+--------------------+----------------+\n",
+    "# | 1           | 5.0                | 1              |\n",
+    "# | 2           | 1.0                | 1              |\n",
+    "# | 3           | 5.0                | 2              |\n",
+    "# | 4           | 4.0                | 1              |\n",
+    "# | 6           | 2.6666666666666665 | 3              |\n",
+    "# | 8           | 3.0                | 1              |\n",
+    "# | 9           | 1.0                | 1              |\n",
+    "# | 12          | 4.0                | 1              |\n",
+    "# | 13          | 1.0                | 1              |\n",
+    "# | 17          | 3.0                | 1              |\n",
+    "# +-------------+--------------------+----------------+\n",
+    "\n",
+    "\n",
+    "# aether_energy_analytics.duckdb> select * from testing.customer_profiles limit 10;\n",
+    "# +-------------+-------------------+-----+--------+------------+----------------+--------------------+\n",
+    "# | customer_id | customer_name     | age | region | avg_rating | feedback_count | total_energy_usage |\n",
+    "# +-------------+-------------------+-----+--------+------------+----------------+--------------------+\n",
+    "# | 1           | David Lee         | 69  | West   | 5.0        | 1              | 45.13808822631836  |\n",
+    "# | 2           | Jessica Hernandez | 25  | East   | 1.0        | 1              | 31.328250885009766 |\n",
+    "# | 3           | Noah Robles       | 28  | West   | 5.0        | 2              | 16.673900604248047 |\n",
+    "# | 4           | Julie Hood        | 28  | West   | 4.0        | 1              | 90.46503829956055  |\n",
+    "# | 9           | Mark Martin       | 61  | South  | 1.0        | 1              | 40.27234172821045  |\n",
+    "# | 12          | Daniel Ware       | 49  | West   | 4.0        | 1              | 26.803014755249023 |\n",
+    "# | 17          | Heather Lopez     | 64  | North  | 3.0        | 1              | 25.338489532470703 |\n",
+    "# | 18          | Nicole Williams   | 48  | South  | 4.0        | 2              | 22.52873420715332  |\n",
+    "# | 21          | Dennis Roberts    | 62  | East   | 4.0        | 1              | 19.991851806640625 |\n",
+    "# | 25          | Tammy Palmer      | 34  | East   | 2.0        | 1              | 18.850507736206055 |\n",
+    "# +-------------+-------------------+-----+--------+------------+----------------+--------------------+\n",
+    "# 10 rows in set\n",
+    "\n",
+    "# aether_energy_analytics.duckdb> select * from testing.monthly_consumption limit 10;\n",
+    "# +------------+-------------+--------------------+\n",
+    "# | month      | customer_id | total_energy_usage |\n",
+    "# +------------+-------------+--------------------+\n",
+    "# | 2023-01-01 | 1           | 45.13808822631836  |\n",
+    "# | 2023-01-01 | 2           | 31.328250885009766 |\n",
+    "# | 2023-02-01 | 3           | 16.673900604248047 |\n",
+    "# | 2023-02-01 | 4           | 90.46503829956055  |\n",
+    "# | 2023-02-01 | 5           | 11.328895568847656 |\n",
+    "# | 2023-02-01 | 9           | 40.27234172821045  |\n",
+    "# | 2023-01-01 | 11          | 25.794771194458008 |\n",
+    "# | 2023-02-01 | 12          | 26.803014755249023 |\n",
+    "# | 2023-02-01 | 14          | 24.619844436645508 |\n",
+    "# | 2023-02-01 | 15          | 26.455869674682617 |\n",
+    "# +------------+-------------+--------------------+\n",
+    "# 10 rows in set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# pull data from sql server with tableau, and use tableau here \n",
     "\n",
     "# https://www.tableau.com/products/desktop/download\n",
